# reData

./: .gitignore  CHANGELOG.md  CLAUDE.md  QUICK_START.md  README.md
redata-app/backend/: DDD_ARCHITECTURE.md  RUST_MIGRATION_PLAN.md  TODOLIST.md  main.py  migrate_add_additional_requirement.py  migrate_add_dedup_key.py  migrate_add_soft_delete.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test_extract.py
redata-app/backend/data/: app.db
redata-app/backend/src/redata/: main.py
redata-app/backend/src/redata/api/: ai_configs.py  fields.py  files.py  processing.py  projects.py  results.py
redata-app/backend/src/redata/db/: base.py
redata-app/backend/src/redata/models/: project.py  schemas.py
redata-app/backend/src/redata/services/: __init__.py  ai_client.py  excel_parser.py  extractor.py  storage.py  validator.py
redata-app/backend/tests/: __init__.py  conftest.py  test_api_ai_configs.py  test_api_fields.py  test_api_processing.py  test_api_projects.py  test_api_results.py  test_integration_table_lifecycle.py  test_service_ai_client.py  test_service_excel_parser.py  test_service_storage.py  test_service_validator.py
redata-app/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
redata-app/src-tauri/capabilities/: default.json
redata-app/src-tauri/icons/: generate-icons.sh  icon.icns
redata-app/src-tauri/src/: lib.rs  main.rs
redata-app/src-tauri/src/backend/: mod.rs
redata-app/src-tauri/src/backend/application/: mod.rs
redata-app/src-tauri/src/backend/application/commands/: mod.rs
redata-app/src-tauri/src/backend/domain/: mod.rs
redata-app/src-tauri/src/backend/infrastructure/: mod.rs
redata-app/src-tauri/src/backend/presentation/: mod.rs
redata-app/src-tauri/src/commands/: ai_configs.rs  ai_service.rs  ai_utils.rs  excel.rs  fields.rs  mod.rs  processing.rs  project_groups.rs  projects.rs  records.rs  statistics.rs  tasks.rs
redata-app/src-tauri/src/db/: mod.rs  schema.rs
redata-app/src-tauri/src/models/: config.rs  field.rs  mod.rs  project.rs  task.rs
redata-app/src-tauri/src/services/: mod.rs  storage.rs
(+87 files in other folders)
