[package]
name = "redata"
version = "0.1.0"
description = "智能数据处理平台"
authors = ["reData Team"]
edition = "2021"
default-run = "redata"

[lib]
name = "redata_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "redata"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Web 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AI 集成
async-openai = "0.24"
reqwest = { version = "0.12", features = ["json"] }

# Excel 处理
calamine = "0.26"
rust_xlsxwriter = "0.76"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置
dotenvy = "0.15"

# 正则表达式
regex = "1"

# 加密（用于 API 密钥）
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# 异步 trait
async-trait = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
